gcc/testsuite/rust/rustc/ui/associated-type-bounds/bad-universal-in-dyn-in-where-clause.rs
trait B {
    type AssocType;
}

fn f()
where
    dyn for<'j> B<AssocType: 'j>:,
// { dg-error "" "" { target *-*-* } .-1 }
{
}

fn main() {}

